--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,15 @@
 {
-  "singleQuote": true
+  "useTabs": false,
+  "semi": false,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "editorconfig": true,
+  "overrides": [
+      {
+          "files": "Pulumi.*.yaml",
+          "options": {
+              "singleQuote": false
+          }
+      }
+  ]
 }
