--- a/.editorconfig
+++ b/.editorconfig
@@ -4,10 +4,26 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-indent_size = 2
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+end_of_line = lf
 
 [*.md]
 max_line_length = off
+trim_trailing_whitespace = false
+
+# JSON files contain newlines inconsistently
+[*.json]
+insert_final_newline = ignore
+
+[package.json]
+insert_final_newline = ignore
+indent_size = 2
+
+[nx.json]
+insert_final_newline = ignore
+indent_size = 2
+
+[*.md]
 trim_trailing_whitespace = false
