--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "@quill/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:frontend": "yarn nx dev quill-frontend",
+    "start:backend": "yarn nx run quill-backend:serve"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "^20.0.0",
     "axios": "^1.6.0",
+    "class": "^0.1.4",
+    "class-transformer": "^0.5.1",
     "next": "14.2.3",
+    "pg": "^8.13.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.20",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
