--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "^20.0.0",
+    "@types/express-session": "^1.18.0",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "class": "^0.1.4",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "connect-typeorm": "^2.0.0",
+    "express-session": "^1.18.1",
     "next": "14.2.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
