--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-express": "^10.4.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "^20.0.0",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^1.4.12",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class": "^0.1.4",
