--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "styled-components": "^6.1.13",
     "typeorm": "^0.3.20",
     "validator": "^13.12.0"
   },
