--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/platform-express": "^10.4.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "^20.0.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.12",
     "axios": "^1.6.0",
@@ -29,6 +30,9 @@
     "pg": "^8.13.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "styled-components": "^6.1.13",
