--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.12",
+    "add": "^2.0.6",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class": "^0.1.4",
@@ -31,13 +32,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "styled-components": "^6.1.13",
     "typeorm": "^0.3.20",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
