--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.6",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.4.15",
     "@nx/nest": "^20.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/express-session": "^1.18.0",
@@ -37,6 +39,8 @@
     "react-redux": "^9.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "typeorm": "^0.3.20",
     "validator": "^13.12.0",
