--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "connect-typeorm": "^2.0.0",
+    "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
     "next": "14.2.3",
     "passport": "^0.7.0",
