--- a/package.json
+++ b/package.json
@@ -8,84 +8,84 @@
   },
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.6",
-    "@nestjs/platform-socket.io": "^10.4.15",
-    "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.4.15",
-    "@nx/nest": "^20.0.0",
-    "@reduxjs/toolkit": "^2.3.0",
-    "@types/express-session": "^1.18.0",
-    "@types/multer": "^1.4.12",
+    "@nestjs/common": "^11.1.9",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/platform-socket.io": "^11.1.9",
+    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.9",
+    "@nx/nest": "^22.2.3",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@types/express-session": "^1.18.2",
+    "@types/multer": "^2.0.0",
     "add": "^2.0.6",
-    "axios": "^1.6.0",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "class": "^0.1.4",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.3",
     "connect-typeorm": "^2.0.0",
     "date-fns": "^4.1.0",
-    "express-session": "^1.18.1",
-    "next": "14.2.3",
+    "express-session": "^1.18.2",
+    "next": "^16.0.10",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
+    "pg": "^8.16.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.68.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.13",
-    "typeorm": "^0.3.20",
-    "validator": "^13.12.0",
-    "yarn": "^1.22.22"
+    "styled-components": "^6.1.19",
+    "typeorm": "^0.3.28",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "20.0.0",
-    "@nx/eslint-plugin": "20.0.0",
-    "@nx/jest": "20.0.0",
-    "@nx/js": "20.0.0",
-    "@nx/next": "20.0.0",
-    "@nx/node": "20.0.0",
-    "@nx/web": "20.0.0",
-    "@nx/webpack": "20.0.0",
-    "@nx/workspace": "20.0.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "babel-jest": "^29.7.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
-    "nx": "^20.0.0",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0",
-    "webpack-cli": "^5.1.4"
-  }
+    "@eslint/compat": "^2.0.0",
+    "@eslint/js": "^9.39.2",
+    "@nestjs/schematics": "^11.0.9",
+    "@nestjs/testing": "^11.1.9",
+    "@nx/eslint": "^22.2.3",
+    "@nx/eslint-plugin": "^22.2.3",
+    "@nx/jest": "^22.2.3",
+    "@nx/js": "^22.2.3",
+    "@nx/next": "^22.2.3",
+    "@nx/node": "^22.2.3",
+    "@nx/web": "^22.2.3",
+    "@nx/webpack": "^22.2.3",
+    "@nx/workspace": "^22.2.3",
+    "@swc-node/register": "^1.11.1",
+    "@swc/core": "^1.15.4",
+    "@swc/helpers": "^0.5.17",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "babel-jest": "^30.2.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-environment-node": "^30.2.0",
+    "nx": "^22.2.3",
+    "prettier": "^3.7.4",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0",
+    "webpack-cli": "^6.0.1"
+  },
+  "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
 }
